--- a/source/javascripts/settings.js.erb
+++ b/source/javascripts/settings.js.erb
@@ -1,7 +1,7 @@
 var MEME_SETTINGS = {
   creditText: 'Source:', // Default "credits" text.
   creditSize: 12, // Font size for credit text.
-  downloadName: 'share', // The name of the downloaded image file (will have a ".png" extension added).
+  downloadName: 'enigma-index', // The name of the downloaded image file (will have a ".png" extension added).
   fontColor: 'white', // Universal font color.
 
   // Universal font family for texts:
@@ -12,7 +12,7 @@ var MEME_SETTINGS = {
   fontFamilyOpts: ['Avenir Light', 'Helvetica Neue', 'Avenir Book'],
   
   // Font size of main headline:
-  fontSize: 24,
+  fontSize: 36,
   // Font size options: set to empty array to disable font-size selector.
   fontSizeOpts: [
     {text: 'Small text', value: 14},
@@ -20,7 +20,7 @@ var MEME_SETTINGS = {
     {text: 'Large text', value: 36}
   ],
 
-  headlineText: 'Write your own headline', // Default headline text.
+  headlineText: 'The #1 piece of cargo imported into the U.S. in 2013: empty containers (over 275k of them)', // Default headline text.
   height: 378, // Canvas rendering height.
   imageScale: 1, // Background image scale.
   imageSrc: '', // Default background image path. MUST reside on host domain, or use base64 data.
