--- a/source/javascripts/settings.js.erb
+++ b/source/javascripts/settings.js.erb
@@ -27,9 +27,9 @@ var MEME_SETTINGS = {
   overlayAlpha: 0.8, // Opacity of image overlay.
 
   // Image overlay color, or blank ('') for no overlay:
-  overlayColor: '#000',
+  overlayColor: '#eb3f25',
   // Overlay color options: set to empty array to disable overlay options selector.
-  overlayColorOpts: ['#000', '#288cd2', '#eb3f25', '#00b495'],
+  overlayColorOpts: ['#eb3f25', '#288cd2', '#00b495', '#000'],
   paddingRatio: 0.05, // Percentage of canvas width to use as edge padding.
   
   // Text alignment: valid settings are "left", "center", and "right".
